# Poppy

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  sdl_image
include/glad/: glad.h
shaders/learning/: triangle.fs  triangle.vs
src/: float3.h  float4.h  glad.c  listo.h  main.cpp  mat4x4.h  notes.md  poppy.cpp  poppy.h  poppy.inl  shader.cpp  shader.h  songList  test  test.h  test.md
